# cmd/requestEth/wire_gen.go
@@ -1,6 +1,6 @@
 // Code generated by Wire. DO NOT EDIT.
 
-//go:generate go run github.com/google/wire/cmd/wire
+//go:generate go run -mod=mod github.com/google/wire/cmd/wire
 //go:build !wireinject
 // +build !wireinject
 
@@ -9,7 +9,9 @@ package main
 import (
 	"github.com/go-kratos/kratos/v2"
 	"github.com/go-kratos/kratos/v2/log"
+	"requestEth/internal/biz"
 	"requestEth/internal/conf"
+	"requestEth/internal/data"
 	"requestEth/internal/server"
 	"requestEth/internal/service"
 )
@@ -17,11 +19,21 @@ import (
 // Injectors from wire.go:
 
 // wireApp init kratos application.
-func wireApp(confServer *conf.Server, data *conf.Data, logger log.Logger) (*kratos.App, func(), error) {
-	transactionService := service.NewTransactionService()
+func wireApp(confServer *conf.Server, confData *conf.Data, logger log.Logger) (*kratos.App, func(), error) {
+	db := data.NewDB(confData)
+	client := data.NewRedis(confData)
+	dataData, cleanup, err := data.NewData(confData, logger, db, client)
+	if err != nil {
+		return nil, nil, err
+	}
+	userRepo := data.NewUserRepo(dataData, logger)
+	transaction := data.NewTransaction(dataData)
+	appUsecase := biz.NewAppUsecase(userRepo, transaction, logger)
+	transactionService := service.NewTransactionService(appUsecase, logger)
 	grpcServer := server.NewGRPCServer(confServer, transactionService, logger)
 	httpServer := server.NewHTTPServer(confServer, transactionService, logger)
 	app := newApp(logger, grpcServer, httpServer)
 	return app, func() {
+		cleanup()
 	}, nil
 }
